--- a/dobranet_simulator/package.json
+++ b/dobranet_simulator/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/serve-static": "^5.0.4",
     "jsonwebtoken": "^9.0.3",
     "nodemailer": "^7.0.11",
     "reflect-metadata": "^0.2.2",
