--- a/santiago_papeleria_frontend/package.json
+++ b/santiago_papeleria_frontend/package.json
@@ -32,11 +32,15 @@
     "@angular/router": "^20.3.0",
     "@angular/ssr": "^20.3.10",
     "@types/leaflet": "^1.9.21",
+    "chart.js": "^4.5.1",
     "express": "^5.1.0",
+    "jspdf": "^4.0.0",
     "leaflet": "^1.9.4",
     "lucide-angular": "^0.560.0",
+    "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@angular/build": "^20.3.10",
