--- a/santiago-papeleria_backend/package.json
+++ b/santiago-papeleria_backend/package.json
@@ -17,7 +17,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "sonar": "sonar-scanner -Dsonar.token=squ_a7384462acb8bb4421f1316ccb15e5f48995903e"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.1",
@@ -66,7 +67,8 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
+    "typescript-eslint": "^8.20.0",
+    "sonarqube-scanner": "^4.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
