--- a/santiago_papeleria_frontend/angular.json
+++ b/santiago_papeleria_frontend/angular.json
@@ -31,6 +31,9 @@
             "styles": [
               "src/styles.scss",
               "node_modules/leaflet/dist/leaflet.css"
+            ],
+            "allowedCommonJsDependencies": [
+              "sweetalert2"
             ]
           },
           "configurations": {
