--- a/santiago_papeleria_frontend/package.json
+++ b/santiago_papeleria_frontend/package.json
@@ -40,6 +40,7 @@
     "lucide-angular": "^0.560.0",
     "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.26.17",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5"
   },
@@ -58,8 +59,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.5.6",
+    "sonarqube-scanner": "^4.0.0",
     "tailwindcss": "^3.4.0",
-    "typescript": "~5.9.2",
-    "sonarqube-scanner": "^4.0.0"
+    "typescript": "~5.9.2"
   }
 }
