--- a/santiago-papeleria_backend/package.json
+++ b/santiago-papeleria_backend/package.json
@@ -30,14 +30,17 @@
     "@nestjs/schedule": "^6.1.0",
     "@nestjs/serve-static": "^5.0.4",
     "@types/multer": "^2.0.0",
+    "@types/pdfkit": "^0.17.4",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "dotenv": "^17.2.3",
+    "exceljs": "^4.4.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.20.3",
     "nodemailer": "^7.0.11",
+    "pdfkit": "^0.17.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "xlsx": "^0.18.5"
