Registro de Usuarios Mejorado

--- a/santiago_papeleria_frontend/angular.json
+++ b/santiago_papeleria_frontend/angular.json
@@ -33,7 +33,8 @@
               "node_modules/leaflet/dist/leaflet.css"
             ],
             "allowedCommonJsDependencies": [
-              "sweetalert2"
+              "sweetalert2",
+              "leaflet"
             ]
           },
           "configurations": {
