--- a/santiago-papeleria_backend/package.json
+++ b/santiago-papeleria_backend/package.json
@@ -21,6 +21,7 @@
     "sonar": "sonar-scanner -Dsonar.token=squ_a7384462acb8bb4421f1316ccb15e5f48995903e"
   },
   "dependencies": {
+    "@getbrevo/brevo": "^3.0.1",
     "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -31,6 +32,7 @@
     "@nestjs/serve-static": "^5.0.4",
     "@types/multer": "^2.0.0",
     "@types/pdfkit": "^0.17.4",
+    "@xenova/transformers": "^2.17.2",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
