Rutas actualizadas para copmpartir mediante QR

--- a/santiago_papeleria_frontend/angular.json
+++ b/santiago_papeleria_frontend/angular.json
@@ -63,6 +63,11 @@
         },
         "serve": {
           "builder": "@angular/build:dev-server",
+          "options": {
+            "port": 4201,
+            "host": "0.0.0.0",
+            "allowedHosts": true
+          },
           "configurations": {
             "production": {
               "buildTarget": "santiago_papeleria_frontend:build:production"
