--- a/santiago_papeleria_frontend/package.json
+++ b/santiago_papeleria_frontend/package.json
@@ -24,6 +24,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^21.1.1",
     "@angular/cdk": "^20.0.0",
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
