MongoDB atlas encriptado

--- a/santiago-papeleria_backend/.env.ejemplo
+++ b/santiago-papeleria_backend/.env.ejemplo
@@ -27,3 +27,6 @@ OLLAMA_TIMEOUT_MS=30000
 FRONTEND_PROTOCOL=http
 FRONTEND_HOST=localhost
 FRONTEND_PORT=4201
+
+# MongoDB ATLAS contraseña
+MONGO_URI=
